2010-10-31 Gustaf Neumann <neumann@wu-wien.ac.at>
	* nsd/init.tcl: The original code in _ns_getensemble blindly
	(re)creates ensembles with the consequence, that ensembles are not
	efficiently compiled anymore (see byte code in [1]) leading to
	slow code. This patch causes aolserver to reconfigure preexisting
	ensembles instead of recreating it. This behavior could be seen as
	a bug in Tcl. The fixed code is correct, even when TCT decides to
	do something about this unpleasant behavior.

	[1] http://sourceforge.net/tracker/?func=detail&aid=3098085&group_id=10894&atid=110894

2010-09-09 Gustaf Neumann <neumann@wu-wien.ac.at>

	* nslog/nslog.c: Quick fix for terminal escape sequence attack
	http://www.securityfocus.com/bid/37712

2009-12-24 Jeff Rogers <dvrsn@diphi.com>

	* include/nsthread.h: added pre-8.6 compatibility define 
	for Tcl_GetErrorLine

	* nsd/adpeval.c:
	* nsd/tclloop.c: removed direct access to TclInterp->errorLine
	for tcl api change in TIP #336

	* nsd/init.tcl: added _ns_genensemble to recreate ensemble
	commands in interpreter init script

2009-12-08 Jim Davidson <jgdavidson@aol.com>

	* include/ns.h: Changed definition of Ns_QueueWait, added
	NS_FILTER_READ and NS_FILTER_WRITE constants and definition
	for new Ns_ConnContentAvail.

	* nsd/Makefile: Added tclstore.o.

	* nsd/conn.c: Added Ns_ConnContentAvail routine and "avail"
	option to ns_conn command.

	* nsd/connio.c: Add call to invoke new write filters.

	* nsd/driver.c: Fixed bugs with the pre-queue filter and
	que-wait callback interfaces, added calls to read filters,
	and added a socket state transition debug log message.

	* nsd/queue.c: Moved some connection setup/cleanup to the
	driver to make pre-queue and read filters safer.

	* nsd/tclrequest.c: Added "read" and "write" options to
	ns_register_filter.

	* nsd/tclstore.c (new file):
	* nsd/tclsock.c:
	* nsd/tclcmds.c: New ns_tls, ns_cls, and ns_quewait commands.

	* tcl/pools.tcl: Changed default timeout from 0 (no longer